# share-cli

./: Cargo.toml  README.md  test.txt
src/: main.rs
