[package]
name = "share"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
clipboard = "0.5.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
